<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bkg"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/submit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:id="@+id/toolbar_image"
                android:layout_centerInParent="true"
                android:src="@drawable/gads_header"
                android:layout_height="50dp"/>

        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:text="Project Submission"
        android:textStyle="bold"
        android:textColor="@color/darkOrange"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/submit_line"
            android:layout_height="2dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/container"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/first_name"
            android:hint="@string/first_name_hint"
            android:layout_marginEnd="4dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:background="@drawable/submit_back"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/last_name"
            android:hint="@string/last_name_hint"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:background="@drawable/submit_back"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/email_hint"
        android:id="@+id/email"
        android:background="@drawable/submit_back"
        android:layout_marginTop="60dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


        <EditText
            android:layout_width="match_parent"
            android:hint="@string/github_link_hint"
            android:background="@drawable/submit_back"
            android:layout_marginTop="60dp"
            android:paddingStart="10dp"
            android:id="@+id/github_link"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="120dp"
            android:text="@string/submit_btn"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/submit_rect"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:clickable="true"
            android:id="@+id/main_submit"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:layout_height="30dp"
            android:focusable="true" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>



</LinearLayout>
</RelativeLayout>